--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@craco/craco": "^6.3.0",
     "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/typography": "^0.4.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,10 +13,12 @@
     "@types/node": "^12.20.27",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "cuid": "^2.1.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.4",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/cuid": "^2.0.1",
     "@types/react-router-dom": "^5.3.0",
     "autoprefixer": "^9.8.7",
     "postcss": "^7.0.38",
